Initial stub out of switch from meeting_motions to meeting_sections plus meeting_items.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -4,3 +4,6 @@
  *= require cornell-assemblies-branding
  */
 
+ol.meeting-sections { list-style-type: upper-roman; }
+ol.meeting-items { list-style-type: decimal; }
+
