Add editing functionality for meeting sections and motions within meetings.

--- a/app/views/meeting_sections/_meeting_section.html.erb
+++ b/app/views/meeting_sections/_meeting_section.html.erb
@@ -1,4 +1,5 @@
 <%= content_tag :li do %>
+  <%= meeting_section.name %>
   <%= render partial: 'meeting_items/meeting_items', object: meeting_section.meeting_items %>
 <% end %>
 
