--- a/app/views/meetings/_meeting_item_fields.html.erb
+++ b/app/views/meetings/_meeting_item_fields.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, class: 'nested-fields' do %>
-  <%= f.inputs do %>
+  <%= f.inputs name: 'Meeting Item' do %>
     <%= f.input :name, hint: "If not associated with a motion, provide name and leave motion blank." %>
     <%= f.input :motion_name, hint: "If associated with a motion, specify motion and leave name blank." %>
     <%= f.input :duration, hint: "How many minutes are allocated to this item?" %>
