Add basic management of meeting templates.  Assign committees to meeting templates.

--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -8,6 +8,7 @@
   <%= form.input :active, as: :radio, label: 'Active?',
     hint: 'Is committee active for staffing and motion purposes?' %>
   <%= form.input :schedule, hint: 'On what schedule are sessions of the committee organized?' %>
+  <%= form.input :meeting_template, hint: 'What template should be used to create meeting agendas?' %>
   <%= form.input :brand %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
