--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -50,6 +50,7 @@
           <li><%= link_to 'authorities', authorities_path %></li>
           <li><%= link_to 'brands', brands_path %></li>
           <li><%= link_to 'committees', committees_path %></li>
+          <%= content_tag :li, link_to( 'meeting templates', meeting_templates_path ) %>
           <li><%= link_to 'positions', positions_path %></li>
           <li><%= link_to 'qualifications', qualifications_path %></li>
           <li><%= link_to 'questions', questions_path %></li>
