Revert addition of user to motion_event model. Add watch/unwatch toggle for motions.

--- a/app/views/motions/_motion.html.erb
+++ b/app/views/motions/_motion.html.erb
@@ -11,6 +11,7 @@
     <td class="name"><%= motion.name %></td>
     <td><%= motion.status %></td>
     <td><%= link_to 'Show', motion %></td>
+    <td><%= link_to_watch_toggle( motion ) %></td>
     <td><%= link_to( 'Edit', edit_motion_path(motion) ) if permitted_to? :edit, motion %></td>
     <td><%= link_to( 'Destroy', motion, data: { confirm: 'Are you sure?' }, method: :delete ) if permitted_to? :destroy, motion %></td>
     <%=render partial: 'motions/event', collection: Motion::EVENTS,
