--- a/app/views/enrollments/_enrollments.html.erb
+++ b/app/views/enrollments/_enrollments.html.erb
@@ -12,9 +12,8 @@
   <% end %>
     <th>Title</th>
     <th>Votes</th>
-    <th>MembershipRequestable?</th>
-    <th>Membership notices?</th>
-    <th>Manager?</th>
+    <th>Requestable?</th>
+    <th>Roles</th>
   </tr>
   </thead>
   <tbody>
