Use sortable label to make sortable elements of a form pretty.

--- a/app/views/meeting_templates/_meeting_item_template_fields.html.erb
+++ b/app/views/meeting_templates/_meeting_item_template_fields.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, class: 'nested-fields' do %>
-  <%= f.inputs name: 'Meeting Item Template' do %>
+  <%= f.inputs name: sortable_label( 'Meeting Item Template' ) do %>
     <%= f.input :name %>
     <%= f.input :duration %>
     <%= f.input :description %>
