--- a/app/views/meeting_templates/_meeting_section_template_fields.html.erb
+++ b/app/views/meeting_templates/_meeting_section_template_fields.html.erb
@@ -1,5 +1,5 @@
 <%= content_tag :div, class: 'nested-fields' do %>
-  <%= f.inputs name: 'Meeting Section Template' do %>
+  <%= f.inputs name: sortable_label( 'Meeting Section Template' ) do %>
     <%= f.input :name %>
     <%= f.input :position, as: :hidden %>
     <%= f.input :meeting_item_templates, as: :cocoon, ordered_by: :position %>
