--- a/app/views/motion_event_mailer/propose_notice.html.erb
+++ b/app/views/motion_event_mailer/propose_notice.html.erb
@@ -1,27 +1,21 @@
 <p>
-Dear <%= @motion.users.map(&:first_name).listify %>,
+Dear <%= vicechairs.map(&:first_name).listify %>,
 </p>
 
 <p>
-This is a confirmation that on <%= @motion_event.occurrence.to_s :long_ordinal %> you have proposed <%= @motion.to_s(:numbered) %> for consideration by <%= @motion.committee %>.
-</p>
-
-<% if @motion.committee.managers.any? %>
-<p>
-<%= @motion.committee.managers.map(&:name).listify(joiner: 'and') %> <% @motion.committee.managers.length > 1 ? 'have' : 'has' %> been notified of this proposal and will schedule it for a meeting or otherwise act on it in accordance with the rules of the committee.
-</p>
-<% end %>
-
-<p>
-Since the motion is proposed, you are not permitted to make additional changes as sponsor.  Changes may only be made by the managers in accordance with the rules of the committee.  You may view the motion here:
+<% if motion.sponsored? %><%= motion.users.map(&:name).listify %> proposed <%= motion.to_s(:numbered) %><% else %><%= motion.to_s(:numbered) %> was proposed<% end %> on <%= event.occurrence.to_s :long_ordinal %> for consideration by <%= motion.committee %>.
 </p>
 
 <p>
-<%= motion_url(@motion) %>
+You may <%= motion.status_paths.events.map(&:to_s).listify(joiner: 'or') %> the motion here:
 </p>
 
 <p>
-<%= @motion.effective_contact_name %><br/>
-<%= @motion.effective_contact_email %>
+<%= motion_url(motion) %>
+</p>
+
+<p>
+<%= motion.effective_contact_name %><br/>
+<%= motion.effective_contact_email %>
 </p>
 
