If a referred motion, identify as such in notices and treat original sponsors as the sponsors.

--- a/app/views/layouts/motion_event_mailer.text.erb
+++ b/app/views/layouts/motion_event_mailer.text.erb
@@ -2,6 +2,10 @@
 
 <%= yield %>
 
+<% if motion.referring_motion_id %>
+The motion is <%= referred_motion_description motion %>.
+
+<% end %>
 <%= render partial: "allowed_events" %>
 
 <%= motion.effective_contact_name %>
