--- a/app/views/layouts/motion_event_mailer.html.erb
+++ b/app/views/layouts/motion_event_mailer.html.erb
@@ -4,6 +4,12 @@
 
 <%= yield %>
 
+<% if motion.referring_motion_id %>
+<p>
+The motion is <%= referred_motion_description motion %>.
+</p>
+
+<% end %>
 <%= render partial: "allowed_events" %>
 
 <p>
