--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
 		    <ul>
           <% if current_user %>
           <li><%= link_to 'home', profile_path %></li>
-          <% if current_user.admin? %>
+          <% if current_user.admin? || current_user.staff? %>
           <li><%= link_to 'authorities', authorities_path %></li>
           <li><%= link_to 'brands', brands_path %></li>
           <li><%= link_to 'committees', committees_path %></li>
