Enable attachments for meeting items either implicitly through motion or directly if there is no motion.

--- a/app/views/meeting_items/_meeting_item.html.erb
+++ b/app/views/meeting_items/_meeting_item.html.erb
@@ -5,5 +5,10 @@
   <%= meeting_item.name %>
   <% end -%>
   (<%= pluralize meeting_item.duration, 'minute' %>)
+  <% if meeting_item.motion %>
+  <%= render partial: 'attachments/attachments', object: meeting_item.motion.attachments %>
+  <% else %>
+  <%= render partial: 'attachments/attachments', object: meeting_item.attachments %>
+  <% end %>
 <% end %>
 
