--- a/app/views/attachments/_attachment_fields.html.erb
+++ b/app/views/attachments/_attachment_fields.html.erb
@@ -1,12 +1,11 @@
-<div class="nested-fields">
-  <%= f.input :document, as: :file, label: 'Attachment document',
-    hint: 'Specify the file you wish to attach.' %>
-  <%= f.input :document_cache, as: :hidden %>
-  <%= f.input :description, label: 'Attachment description',
-    hint: 'Briefly and uniquely describe the contents of the attachment.' %>
-
-  <p>
-  <%= link_to_remove_association 'remove attachment', f %>
-  </p>
-</div>
+<%= content_tag :div, class: 'nested-fields' do %>
+  <%= f.inputs name: 'Attachment' do %>
+    <%= f.input :document, as: :file, label: 'Attachment document',
+      hint: 'Specify the file you wish to attach.' %>
+    <%= f.input :document_cache, as: :hidden %>
+    <%= f.input :description, label: 'Attachment description',
+      hint: 'Briefly and uniquely describe the contents of the attachment.' %>
+    <%= content_tag :li, link_to_remove_association( 'Remove Attachment', f ) %>
+  <% end %>
+<% end %>
 
