Add publish email to committee record to specify default place to post publication of meeting (to be implemented). Get rid of unused empty step definition file.

--- a/app/views/committees/_form.html.erb
+++ b/app/views/committees/_form.html.erb
@@ -10,6 +10,7 @@
   <%= form.input :schedule, hint: 'On what schedule are sessions of the committee organized?' %>
   <%= form.input :meeting_template, hint: 'What template should be used to create meeting agendas?' %>
   <%= form.input :brand %>
+  <%= form.input :publish_email, hint: 'Where is the default address to publish meeting notices?' %>
   <%= form.input :join_message %>
   <%= form.input :leave_message %>
   <%= form.input :reject_message %>
