--- a/app/views/committees/show.html.erb
+++ b/app/views/committees/show.html.erb
@@ -27,6 +27,10 @@
   <b>Brand:</b> <%= @committee.brand ? link_to(@committee.brand.name, brand_path( @committee.brand )) : 'No' %>
 </p>
 
+<p>
+  <b>Publish email:</b> <%= @committee.publish_email %>
+</p>
+
 <p><b>Join message:</b></p>
 
 <%=markdown @committee.join_message %>
