--- a/app/views/meeting_items/_meeting_items.text.erb
+++ b/app/views/meeting_items/_meeting_items.text.erb
@@ -1,5 +1,6 @@
 <% if meeting_items.any? %>
-<%= render partial: 'meeting_items/meeting_item', collection: meeting_items %>
+<%= render partial: 'meeting_items/meeting_item', collection: meeting_items,
+  locals: { meeting: meeting } %>
 <% else %>
   No items.
 <% end %>
