--- a/app/views/meeting_sections/_meeting_section.text.erb
+++ b/app/views/meeting_sections/_meeting_section.text.erb
@@ -1,3 +1,4 @@
-<%= (meeting_section_counter + 1).to_roman %> <%= meeting_section.name %>
-<%= render partial: 'meeting_items/meeting_items', object: meeting_section.meeting_items %>
+<%= (meeting_section_counter + 1).to_roman %>. <%= meeting_section.name %>
+<%= render partial: 'meeting_items/meeting_items',
+  object: meeting_section.meeting_items, locals: { meeting: meeting } %>
 
