--- a/app/views/meeting_items/_meeting_items.html.erb
+++ b/app/views/meeting_items/_meeting_items.html.erb
@@ -1,6 +1,7 @@
 <% if meeting_items.any? -%>
   <%= content_tag :ol, class: 'meeting-items' do %>
-  <%= render partial: 'meeting_items/meeting_item', collection: meeting_items %>
+  <%= render partial: 'meeting_items/meeting_item', collection: meeting_items,
+    locals: { meeting: meeting } %>
   <% end %>
 <% else -%>
   <%= content_tag :p, "No items." %>
