--- a/app/views/meeting_mailer/publish_notice.html.erb
+++ b/app/views/meeting_mailer/publish_notice.html.erb
@@ -8,3 +8,9 @@ AGENDA
 
 <%= render partial: 'meeting_sections/meeting_sections', object: meeting.meeting_sections %>
 
+<% if meeting.attachments.values.flatten.any? %>
+<%= footnotes_for_meeting_attachments( meeting ) %>
+<% else %>
+<p>No attachments.</p>
+<% end %>
+
