--- a/app/views/meeting_mailer/publish_notice.text.erb
+++ b/app/views/meeting_mailer/publish_notice.text.erb
@@ -3,6 +3,10 @@ AGENDA
 <%= meeting.starts_at.to_date.to_s :long_ordinal %>
 <%= meeting.to_s :time %>
 <%= meeting.location %>
-
 <%= render partial: 'meeting_sections/meeting_sections', object: meeting.meeting_sections %>
+<% if meeting.attachments.values.flatten.any? %>
+<%= footnotes_for_meeting_attachments( meeting, format: :text ) %>
+<% else %>
+No attachments.
+<% end %>
 
