--- a/app/views/meeting_sections/_meeting_sections.html.erb
+++ b/app/views/meeting_sections/_meeting_sections.html.erb
@@ -1,7 +1,8 @@
+<% absolute ||= false %>
 <% if meeting_sections.any? %>
-  <%= content_tag :ol, class: 'meeting-sections', id: 'meeting-sections' do %>
+  <%= content_tag :ol, style: "list-style-type: upper-roman;", class: 'meeting-sections', id: 'meeting-sections' do %>
     <%= render partial: 'meeting_sections/meeting_section',
-      collection: meeting_sections, locals: { meeting: meeting } %>
+      collection: meeting_sections, locals: { meeting: meeting, absolute: absolute } %>
   <% end %>
 <% else %>
   <%= content_tag :p, 'No sections.' %>
